--- a/index.html
+++ b/index.html
@@ -152,7 +152,9 @@
             <!-- teléfono -->
             <div>
                 <span class="tipo-contacto">Cell phone: </span>
-                <a class="contacto-info" href="tel: +57 3244779505"> +57 3244779505</a>
+                <a class="contacto-info" href="tel: +57 3016783361"> +57 3016783361</a>
+                <span class="tipo-contacto">Cell phone: </span>
+                <a class="contacto-info" href="tel: +57 3002321506"> +57 3002321506</a>
             </div>
             <!-- correo electrónico -->
             <div>
