--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
                     <li><span class="elemento-lista-lateral">Dot works beginner - english beginners</span></li>
                     <li><span class="elemento-lista-lateral">Accounting Accounts</span></li>
                     <li><span class="elemento-lista-lateral">Accounting in Organizations</span></li>
+                    <li><span class="elemento-lista-lateral">NoSQL database implementation</span></li>
                     <li><span class="elemento-lista-lateral">Establish the necessary requirements to develop the activities of the 
                                                                 work order in accordance with the maintenance plan.</span></li>
                     <li><span class="elemento-lista-lateral">Inspect the goods to preserve the operating conditions according to 
